--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+base64 = "0.22.1"
 clap = { version = "4.5.41", features = ["derive"] }
 env_logger = "0.11.8"
+font-kit = "0.14.3"
 log = "0.4.27"
+rusttype = "0.9.3"
 svg = "0.18.0"
