--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,8 @@ clap = { version = "4.5.41", features = ["derive"] }
 env_logger = "0.11.8"
 font-kit = "0.14.3"
 log = "0.4.27"
+once_cell = "1.21.3"
 rusttype = "0.9.3"
+strum = "0.27.2"
+strum_macros = "0.27.2"
 svg = "0.18.0"
