--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ font-kit = "0.14.3"
 log = "0.4.27"
 once_cell = "1.21.3"
 rusttype = "0.9.3"
+serde = { version = "1.0.226", features = ["derive"] }
+serde_json = "1.0.145"
 strum = "0.27.2"
 strum_macros = "0.27.2"
 svg = "0.18.0"
