--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,6 @@ serde_json = "1.0.145"
 strum = "0.27.2"
 strum_macros = "0.27.2"
 svg = "0.18.0"
-resvg = "0.41.0"
-usvg = "0.41.0"
+chromiumoxide = "0.7.0"
+tokio = "1.47.1"
+futures = "0.3.31"
