--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ base64 = "0.22.1"
 clap = { version = "4.5.41", features = ["derive"] }
 env_logger = "0.11.8"
 font-kit = "0.14.3"
+ignore = "0.4.23"
 log = "0.4.27"
 once_cell = "1.21.3"
 rusttype = "0.9.3"
